@@ -7,18 +7,19 @@ public class BackPropagation {
 
     private ArrayList<Layer> layers;
 
-    public void backPropagate(double[] inputs, double[] expectedOutputs, double learningRate) {
+    public void backpropagate(double[] inputs, double[] expectedOutputs, double learningRate) {
 
         int[] neuronCountByLayer = {64, 8};
         NeuralNetwork nn = new NeuralNetwork(2, neuronCountByLayer); // adjust & change later / move computeOneEpoch into this class instead?
         double[] actualOutputs = nn.computeOneEpoch(inputs); // actual targets (need a feedForward method)
 
         // calc deltas for outer layer
-        Layer outputLayer = layers.get(layers.size() - 1);
+        Layer outputLayer = layers.getLast();
         for (int i = 0; i < outputLayer.getNumberOfNeurons(); i++) {
             Neuron neuron = outputLayer.getNeuron(i);
             double error = expectedOutputs[i] - actualOutputs[i];
-            // neuron.setDelta(error * neuron.sigmoidDerivative()); // need a setter in Neuron class for delta, derivative of sigmoid func
+            neuron.changeInWeight(error, inputs, learningRate);
+            // neuron.setDelta(error * neuron.compute(inputs)); // need a setter in Neuron class for delta, derivative of sigmoid func
         }
 
         // calc deltas for hidden layers
@@ -28,10 +29,10 @@ public class BackPropagation {
             for (int j = 0; j < currLayer.getNumberOfNeurons(); j++) {
                 Neuron neuron = currLayer.getNeuron(j);
                 double error = 0.0;
-                for (Neuron nextNeuron : nextLayer.getNetworkLayer()) {
-                    error += nextNeuron.getWeights()[j] * nextNeuron.getDelta();
-                }
-                // neuron.setDelta(error * neuron.sigmoidDerivative());
+//                for (Neuron nextNeuron : nextLayer.getNeurons()) {
+//                    error += nextNeuron.getWeights()[j] * nextNeuron.getDelta();
+//                }
+//                neuron.setDelta(error * neuron.deriv());
             }
         }
 
